flipkart logo in html and css

--- a/index.html
+++ b/index.html
@@ -39,6 +39,21 @@
 
     </head>
     <body>
+
+      <!-- Header navigation with logo and search bar -->
+    <nav class="heading_navigation flex" id="navigation_heading">
+        <!-- Flipkart Logo -->
+        <div class="nav_container flex">
+          <div class="logo flex">
+            <a href="/index.html" class="flip_logo">
+              <img src="/images/logo/flip-logo.png" alt="logo"/></a>
+            <a href="/index.html" class="anchor plus">Explore
+              <span class="plus_lan">Plus <img src="/images/logo/plus-logo.png" alt="logo" /></span></a>
+          </div>
+
+
+
+    </nav>
       
 
 
