--- a/index.html
+++ b/index.html
@@ -51,8 +51,16 @@
               <span class="plus_lan">Plus <img src="/images/logo/plus-logo.png" alt="logo" /></span></a>
           </div>
 
-
-
+           <!-- Searchbar -->
+           <div class="search_bar_container">
+            <div class="search_bar">
+                <form class="search flex">
+                <input type="text"placeholder="Search For products, brands and more"class="search_box"/>
+                <button class="btn_search"><i class="fa fa-search"></i></button>
+                </form>
+            </div>
+        </div>
+        </div>
     </nav>
       
 
