*more button *more button dropdown *cart button added

--- a/index.html
+++ b/index.html
@@ -156,8 +156,48 @@
           
       </div>  
 
+       <!-- more button -->
+       <div class="col dropdown more more_lan">
+        <a class="btn dropdown-toggle more_lan ml-lg-4 ml-sm-0" href="#" role="button" id="moreMenuLink"
+        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        More
+        </a>
+
+        <div class="dropdown-menu more-list" aria-labelledby="moreMenuLink">
+            <div class="d-flex p-2">
+                <i class="fa fa-bell text-primary ml-md-3 mt-2" aria-hidden="true"></i>
+                <a class="dropdown-item" href="#">Notification Preferences</a>
+            </div>
+            <div class="dropdown-divider"></div>
+            <div class="d-flex p-2">
+                <i class="fa fa-archive text-primary ml-md-3 mt-2" aria-hidden="true"></i>
+                <a class="dropdown-item" href="#">Sell On Flipkart</a>
+            </div>
+            <div class="dropdown-divider"></div>
+            <div class="d-flex p-2">
+                <i class="fa fa-question-circle text-primary ml-md-3 mt-2" aria-hidden="true"></i>
+                <a class="dropdown-item" href="#">24x7 Customer Care</a>
+            </div>
+            <div class="dropdown-divider"></div>
+            <div class="d-flex p-2">
+                <i class="fa fa-line-chart text-primary ml-md-3 mt-2" aria-hidden="true"></i>
+                <a class="dropdown-item" href="#">Advertise</a>
+            </div>
+            <div class="dropdown-divider"></div>
+            <div class="d-flex p-2">
+                <i class="fa fa-download text-primary ml-md-3 mt-2" aria-hidden="true"></i>
+                <a class="dropdown-item" href="#">Download App</a>
+            </div>
+        </div>
+    </div>
+
+    <!-- cart button -->
+    <div class="cart">
+      <span class="cart_lan"><i class="fa fa-shopping-cart"></i> Cart</span>
+    </div>
       </div>
     </nav>
+     <!-- Header nav bar ends  -->
       
 
 
