*top nav bar class and div added

--- a/index.html
+++ b/index.html
@@ -43,7 +43,13 @@
 
 
 
+      <!-- making the heading categories Nav bar and dropdowns Starts-->
+    <div class="heading_categories flex">
+      <ul class="heading_category_list flex">
 
+        
+      </ul>
+    </div>
 
 
         <script src="main.js"></script> 
