--- a/index.html
+++ b/index.html
@@ -47,7 +47,36 @@
     <div class="heading_categories flex">
       <ul class="heading_category_list flex">
 
-        
+        <!-- Top Offers Category -->
+        <li class="heading_category_items">
+          <img
+              src="/images/highlight-1/topoff-hilt-img-1.png"
+              alt="loading image"
+              class="cat_image"
+          />
+          <p class="heading_item_name">Top Offers</p>
+          </li>
+
+          <!-- Grocery Category -->
+          <li class="heading_category_items">
+            <img
+                src="/images/highlight-1/topoff-hilt-img-2.png"
+                alt="loading image"
+                class="cat_image"
+            />
+            <p class="heading_item_name">Grocery</p>
+            </li>
+
+            <!-- Mobiles Category -->
+            <li class="heading_category_items">
+              <img
+                  src="/images/highlight-1/topoff-hilt-img-3.png"
+                  alt="loading image"
+                  class="cat_image"
+              />
+              <p class="heading_item_name">Mobiles</p>
+              </li>
+
       </ul>
     </div>
 
