*Home category *drop down

--- a/index.html
+++ b/index.html
@@ -77,6 +77,92 @@
               <p class="heading_item_name">Mobiles</p>
               </li>
 
+              <!-- Fasion drop down and nav card -->
+            <li class="heading_category_items">
+              <div class="col dropdown">
+                  <img src="/images/highlight-1/topoff-hilt-img-4.png"alt="loading image"class="cat_image"/>
+                  <p class="heading_item_name">Fashion <i class="fa fa-angle-down"></i></p>
+                  <div class="dropdown-menu more-list" aria-labelledby="moreMenuLink">
+                      <div class="d-flex p-3">
+                          <a class="dropdown-item" href="#">Men's Top Wear</a>
+                      </div>
+                      <div class="d-flex p-3">
+                          <a class="dropdown-item" href="#">Men's bottom wear</a>
+                      </div>
+                      <div class="d-flex p-3">
+                          <a class="dropdown-item" href="#">Women Ethnic</a>
+                      </div>
+                      <div class="d-flex p-3">
+                          <a class="dropdown-item" href="#">Women Western</a>
+                      </div>
+                      <div class="d-flex p-3">
+                          <a class="dropdown-item" href="#">Men footwear</a>
+                      </div>
+                      <div class="d-flex p-3">
+                          <a class="dropdown-item" href="#">Women footwear</a>
+                      </div>
+                      <div class="d-flex p-3">
+                          <a class="dropdown-item" href="#">Watches and Accessories</a>
+                      </div>
+                      <div class="d-flex p-3">
+                          <a class="dropdown-item" href="#">Bags,Suitcase and Luggage</a>
+                      </div>
+                      <div class="d-flex p-3">
+                          <a class="dropdown-item" href="#">Kids</a>
+                      </div>
+                      <div class="d-flex p-3">
+                          <a class="dropdown-item" href="#">Essentials</a>
+                      </div>
+                      <div class="d-flex p-3">
+                          <a class="dropdown-item" href="#">Winter</a>
+                      </div>
+                  </div>
+              </div>
+          </li>
+
+          <!-- Electronics drop down and nav card -->
+          <li class="heading_category_items">
+            <div class="col dropdown">
+                <img src="/images/highlight-1/topoff-hilt-img-5.png"alt="loading image"class="cat_image"/>
+                <p class="heading_item_name">Electronics <i class="fa fa-angle-down"></i></p>
+                <div class="dropdown-menu more-list" aria-labelledby="moreMenuLink">
+                    <div class="d-flex p-3">
+                        <a class="dropdown-item" href="#">Audio</a>
+                    </div>
+                    <div class="d-flex p-3">
+                        <a class="dropdown-item" href="#">Electronics GST store</a>
+                    </div>
+                    <div class="d-flex p-3">
+                        <a class="dropdown-item" href="#">Computer Pheripherals</a>
+                    </div>
+                    <div class="d-flex p-3">
+                        <a class="dropdown-item" href="#">Gaming</a>
+                    </div>
+                    <div class="d-flex p-3">
+                        <a class="dropdown-item" href="#">Laptop Accessories</a>
+                    </div>
+                    <div class="d-flex p-3">
+                        <a class="dropdown-item" href="#">Laptop and desktop</a>
+                    </div>
+                    <div class="d-flex p-3">
+                        <a class="dropdown-item" href="#">Mobile Accessory</a>
+                    </div>
+                    <div class="d-flex p-3">
+                        <a class="dropdown-item" href="#">Powerbank</a>
+                    </div>
+                    <div class="d-flex p-3">
+                        <a class="dropdown-item" href="#">Smart Home Automation</a>
+                    </div>
+                    <div class="d-flex p-3">
+                        <a class="dropdown-item" href="#">Smart Wearables</a>
+                    </div>
+                    <div class="d-flex p-3">
+                        <a class="dropdown-item" href="#">Storage</a>
+                    </div>
+                </div>
+            </div>
+        </li>
+
       </ul>
     </div>
 
