--- a/index.html
+++ b/index.html
@@ -163,6 +163,136 @@
             </div>
         </li>
 
+         <!-- Home drop down and nav card -->
+         <li class="heading_category_items">
+          <div class="col dropdown">
+              <img src="/images/highlight-1/topoff-hilt-img-6.jpg"alt="loading image" class="cat_image"/>
+              <p class="heading_item_name">Home <i class="fa fa-angle-down"></i></p>
+
+              <div class="dropdown-menu more-list" aria-labelledby="moreMenuLink">
+                  <div class="d-flex p-3">
+                      <a class="dropdown-item" href="#">Home Furnishings</a>
+                  </div>
+                  <div class="d-flex p-3">
+                      <a class="dropdown-item" href="#">Living Room</a>
+                  </div>
+                  <div class="d-flex p-3">
+                      <a class="dropdown-item" href="#">Kitchen and Dining</a>
+                  </div>
+                  <div class="d-flex p-3">
+                      <a class="dropdown-item" href="#">Home Decor</a>
+                  </div>
+                  <div class="d-flex p-3">
+                      <a class="dropdown-item" href="#">Tools and Utility</a>
+                  </div>
+                  <div class="d-flex p-3">
+                      <a class="dropdown-item" href="#">Lightings &Electricals</a>
+                  </div>
+                  <div class="d-flex p-3">
+                      <a class="dropdown-item" href="#">Space Saving</a>
+                  </div>
+                  <div class="d-flex p-3">
+                      <a class="dropdown-item" href="#">Cleaning & Bath</a>
+                  </div>
+                  <div class="d-flex p-3">
+                      <a class="dropdown-item" href="#">Kids Furniture</a>
+                  </div>
+                  <div class="d-flex p-3">
+                      <a class="dropdown-item" href="#">Pet & Gardening</a>
+                  </div>
+              </div>
+          </div>
+      </li>
+
+       <!-- Appliances drop down and nav card -->
+       <li class="heading_category_items">
+        <div class="col dropdown">
+            <img src="/images/highlight-1/topoff-hilt-img-7.png"alt="loading image"class="cat_image"/>
+            <p class="heading_item_name">Appliances <i class="fa fa-angle-down"></i></p>
+
+            <div class="dropdown-menu more-list" aria-labelledby="moreMenuLink">
+                <div class="d-flex p-3">
+                    <a class="dropdown-item" href="#"> Televisions</a>
+                </div>
+                <div class="d-flex p-3">
+                    <a class="dropdown-item" href="#">Washing MAchines </a>
+                </div>
+                <div class="d-flex p-3">
+                    <a class="dropdown-item" href="#">Refrigerators <a>
+                </div>
+                <div class="d-flex p-3">
+                    <a class="dropdown-item" href="#">Kitchen Appliances</a>
+                </div>
+                <div class="d-flex p-3">
+                    <a class="dropdown-item" href="#">Home Appliances</a>
+                </div>
+                <div class="d-flex p-3">
+                    <a class="dropdown-item" href="#">Seasonal Appliances</a>
+                </div>
+                <div class="d-flex p-3">
+                    <a class="dropdown-item" href="#">Premium Appliances</a>
+                </div>
+                <div class="d-flex p-3">
+                    <a class="dropdown-item" href="#">Buying Guides</a>
+                </div>
+                <div class="d-flex p-3">
+                    <a class="dropdown-item" href="#">Flipkart Benefits</a>
+                </div>
+            </div>
+        </div>
+    </li>
+
+    <!-- Travel Category -->
+    <li class="heading_category_items">
+      <img
+          src="/images/highlight-1/topoff-hilt-img-8.png"
+          alt="loading image"
+          class="cat_image"
+      />
+      <p class="heading_item_name">Travel</p>
+  </li>
+    <!-- Beauty, Toys & More drop down and nav card -->
+    <li class="heading_category_items">
+      <div class="col dropdown">
+          <img src="/images/highlight-1/topoff-hilt-img-9.png"alt="loading image"class="cat_image"/>
+          <p class="heading_item_name">Beauty, Toys & More <i class="fa fa-angle-down"></i></p>
+          <div class="dropdown-menu more-list" aria-labelledby="moreMenuLink">
+              <div class="d-flex p-3">
+                  <a class="dropdown-item" href="#"> Beauty & Personal Care<i class="fa fa-angle-right float-right"></i></a>
+              </div>
+              <div class="d-flex p-3">
+                  <a class="dropdown-item" href="#"> Men's Grooming <i class="fa fa-angle-right float-right"></i></a>
+              </div>
+              <div class="d-flex p-3">
+                  <a class="dropdown-item" href="#">Food & Drinks <i class="fa fa-angle-right float-right"></i><a>
+              </div>
+              <div class="d-flex p-3">
+                  <a class="dropdown-item" href="#"> Nutrition & Health Care <i class="fa fa-angle-right float-right"></i></a>
+              </div>
+              <div class="d-flex p-3">
+                  <a class="dropdown-item" href="#">Baby Care <i class="fa fa-angle-right float-right"></i></a>
+              </div>
+              <div class="d-flex p-3">
+                  <a class="dropdown-item" href="#">Toys & School Supplies <i class="fa fa-angle-right float-right"></i></a>
+              </div>
+              <div class="d-flex p-3">
+                  <a class="dropdown-item" href="#">Sports and Fitness <i class="fa fa-angle-right float-right"></i></a>
+              </div>
+              <div class="d-flex p-3">
+                  <a class="dropdown-item" href="#">Books & Music <i class="fa fa-angle-right float-right"></i></a>
+              </div>
+              <div class="d-flex p-3">
+                  <a class="dropdown-item" href="#">Stationary & Office Supplies<i class="fa fa-angle-right float-right"></i> </a>
+              </div>
+              <div class="d-flex p-3">
+                  <a class="dropdown-item" href="#">Auto Accessories <i class="fa fa-angle-right float-right"></i></a>
+              </div>
+              <div class="d-flex p-3">
+                  <a class="dropdown-item" href="#">Safety & Hygiene Essentials <i class="fa fa-angle-right float-right"></i></a>
+              </div> 
+          </div>
+      </div>
+  </li>
       </ul>
     </div>
 
