--- a/index.html
+++ b/index.html
@@ -457,6 +457,29 @@
     <!-- Category Nav and dropdown ends -->
 
 
+    <!-- Carousel Starts -->
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="/images/highlight-2/hilt-1.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="/images/highlight-2/14ce36c5f9beb28d.jpg" alt="Second slide">
+        </div>
+      </div>
+      <a class="prev_icon" href="#" role="button" data-slide="prev" >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="next_icon" href="#" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+  </div>
+  <!-- Carousel Ends -->
+
+
+
         <script src="main.js"></script> 
         <script src="js/bootstrap.min.js"></script>
         <script src="js/jquery/jquery-2.2.4.min.js"></script>
