product highlight -1 css *viewbtn *sliderheading

--- a/index.html
+++ b/index.html
@@ -478,6 +478,85 @@
   </div>
   <!-- Carousel Ends -->
 
+    <!-- Product Highlight-1 starts -->
+    <div class="d-flex pt-2 my-3">
+      <div class="container-fluid bg-white pb-2 border" style="height: fit-content;">
+          <div class="row pt-3">
+              <div class="col slider-heading">
+                  <h4>Deals Of the Day</h4>
+              </div>
+              <div class="col col-sm-4 view-btn">
+                  <div>
+                      <button class="btn btn-primary shadow">VIEW ALL</button>
+                  </div>
+              </div>
+          </div>
+          <hr>
+          <div class="row d-flex nowrap justify-content-center">
+              <div class="card text-center sales">
+                  <img class="card-img-top p-2 img-fluid w-100" alt="Logitech C310 HD Webcam"
+                      src="/images/highlight-3/htlt1.jpeg">
+                  <div class="card-body p-1" title="30% off">
+                      <h6 class="card-title">ADIDAS</h6>
+                      <a href="#" class="card-link"> Min 30% off</a>
+                      <p class="card-subtitle text-muted">Sports Shoes</p>
+                  </div>
+              </div>
+              <div class="card text-center sales">
+                  <img class="card-img-top p-2 img-fluid w-100" alt="Logitech C310 HD Webcam"
+                      src="/images/highlight-3/51747.jpeg">
+                  <div class="card-body p-1" title="30% off">
+                      <h6 class="card-title">Woodland,Bata,Red Tap...</h6>
+                      <a href="#" class="card-link"> Min 90% off</a>
+                      <p class="card-subtitle text-muted">Womens Foootwear</p>
+                  </div>
+              </div>
+              <div class="card text-center sales">
+                  <img class="card-img-top p-2 img-fluid w-100" alt="Logitech C310 HD Webcam"
+                      src="/images/highlight-3/3.jpeg">
+                  <div class="card-body p-1" title="30% off">
+                      <h6 class="card-title">Jack & Jones,Wildcraft,...</h6>
+                      <a href="#" class="card-link"> Min 30% off</a>
+                      <p class="card-subtitle text-muted">Casual Shoes,Sneakers &</p>
+                  </div>
+              </div>
+              <div class="card text-center sales">
+                  <img class="card-img-top p-2 img-fluid w-100" alt="Logitech C310 HD Webcam"
+                      src="/images/highlight-3/4.jpeg">
+                  <div class="card-body p-1" title="30% off">
+                      <h6 class="card-title">Woodland,Bata,Red Tap...</h6>
+                      <a href="#" class="card-link">Upto 60% off</a>
+                      <p class="card-subtitle text-muted">Casual Shoes, Sneakers</p>
+                  </div>
+              </div>
+              <div class="card text-center sales">
+                  <img class="card-img-top p-2 img-fluid w-100" alt="Logitech C310 HD Webcam"
+                      src="/images/highlight-3/5.jpeg">
+                  <div class="card-body p-1" title="90% off">
+                      <h6 class="card-title">Nike,ASICS,Skeches...</h6>
+                      <a href="#" class="card-link"> Min 90% off</a>
+                      <p class="card-subtitle text-muted">Mens Sports Shoes</p>
+                  </div>
+              </div>
+              <div class="card text-center sales">
+                  <img class="card-img-top p-2 img-fluid w-100" alt="Logitech C310 HD Webcam"
+                      src="/images/highlight-3/6.jpeg">
+                  <div class="card-body p-1" title="Explore More">
+                      <h6 class="card-title">Nike,New Balance</h6>
+                      <a href="#" class="card-link"> Explore More!!</a>
+                      <p class="card-subtitle text-muted">Sports Shoes</p>
+                  </div>
+              </div>
+              
+              
+          </div>
+      </div>
+      <div class="card ml-2 p-2" style="height: 15%;">
+          <img class="card-img img-fluid w-100"
+              src="https://rukminim1.flixcart.com/flap/600/358/image/633789f7def60050.jpg?q=70" alt="IKFS">
+      </div>
+  </div>
+  <!-- Product Highlight-1 Ends -->
 
 
         <script src="main.js"></script> 
