--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
       </div>
   </div>
   <!-- Product Highlight-1 Ends -->
-  
+
   <!-- Highlight-2: 3-Card Banner Section Starts -->
   <div class="container-fluid">
     <div class="row row-cols-3">
@@ -579,6 +579,179 @@
     </div>
 </div>
 <!-- Highlight-2: 3-Card Banner Section Ends -->
+
+<!-- Highlight-3: Product section starts -->
+<div class="container-fluid bg-white my-3 py-2 border shadow-sm">
+  <div class="row pt-3">
+      <div class="col slider-heading">
+          <h4>Best of Electronics</h4>
+          <h6 class="text-muted">Devices and Accessories</h6>
+      </div>
+      <div class="col col-sm-4 view-btn">
+          <div>
+              <button class="btn btn-primary shadow">VIEW ALL</button>
+          </div>
+      </div>
+  </div>
+  <hr>
+  <div class="row d-flex nowrap justify-content-center">
+      <div class="card text-center sales">
+          <img class="card-img-top p-2 img-fluid w-100" alt="Best Brands (Shop Now)"
+              src="https://rukminim1.flixcart.com/image/150/150/kg15ocw0/cases-covers/back-cover/3/y/n/spigen-acs00565-original-imafwcw8bz2tnzgp.jpeg?q=70"
+              srcset="https://rukminim1.flixcart.com/image/300/300/kg15ocw0/cases-covers/back-cover/3/y/n/spigen-acs00565-original-imafwcw8bz2tnzgp.jpeg?q=70 2x, https://rukminim1.flixcart.com/image/150/150/kg15ocw0/cases-covers/back-cover/3/y/n/spigen-acs00565-original-imafwcw8bz2tnzgp.jpeg?q=70 1x">
+          <div class="card-body p-1" title="Shop Now!">
+              <h6 class="card-title">Best Brands</h6>
+              <a href="#" class="card-link">Shop Now!</a>
+              <p class="card-subtitle text-muted">For All Phone Models</p>
+          </div>
+      </div>
+
+      <div class="card text-center sales">
+          <img class="card-img-top p-2 ml-5 img-fluid w-50" alt="JioFi JMR 541 Data Card"
+              src="https://rukminim1.flixcart.com/image/150/150/k6mibgw0/datacard/r/h/g/jiofi-jmr-541-original-imafpfhandhkptwc.jpeg?q=70"
+              srcset="https://rukminim1.flixcart.com/image/300/300/k6mibgw0/datacard/r/h/g/jiofi-jmr-541-original-imafpfhandhkptwc.jpeg?q=70 2x, https://rukminim1.flixcart.com/image/150/150/k6mibgw0/datacard/r/h/g/jiofi-jmr-541-original-imafpfhandhkptwc.jpeg?q=70 1x">
+          <div class="card-body p-1" title="Upto 60% off">
+              <h6 class="card-title">Data Cards</h6>
+              <a href="#" class="card-link">Upto 60% off</a>
+              <p class="card-subtitle text-muted">JioFi, Huawei & more</p>
+          </div>
+      </div>
+
+      <div class="card text-center sales">
+          <img class="card-img-top p-2 img-fluid w-100" alt="Logitech C310 HD Webcam"
+              src="https://rukminim1.flixcart.com/image/150/150/ja73ki80/webcam/pc-webcam/7/q/e/logitech-c310-original-imaeztzqny7jh7gh.jpeg?q=70"
+              srcset="https://rukminim1.flixcart.com/image/300/300/ja73ki80/webcam/pc-webcam/7/q/e/logitech-c310-original-imaeztzqny7jh7gh.jpeg?q=70 2x, https://rukminim1.flixcart.com/image/150/150/ja73ki80/webcam/pc-webcam/7/q/e/logitech-c310-original-imaeztzqny7jh7gh.jpeg?q=70 1x">
+          <div class="card-body p-1" title="From ₹490">
+              <h6 class="card-title">Webcams</h6>
+              <a href="#" class="card-link">From ₹490</a>
+              <p class="card-subtitle text-muted">Logitech, Quantum & more</p>
+          </div>
+      </div>
+
+      <div class="card text-center sales">
+          <img class="card-img-top p-2 img-fluid w-100" alt="Gaming Headsets (Best Selling)"
+              src="https://rukminim1.flixcart.com/image/150/150/k2w6xe80/headphone/k/m/d/acer-predator-galea-311-phw910-np-hds11-00b-original-imafm58gaeg3hb7x.jpeg?q=70"
+              srcset="https://rukminim1.flixcart.com/image/300/300/k2w6xe80/headphone/k/m/d/acer-predator-galea-311-phw910-np-hds11-00b-original-imafm58gaeg3hb7x.jpeg?q=70 2x, https://rukminim1.flixcart.com/image/150/150/k2w6xe80/headphone/k/m/d/acer-predator-galea-311-phw910-np-hds11-00b-original-imafm58gaeg3hb7x.jpeg?q=70 1x">
+          <div class="card-body p-1" title="Best Selling">
+              <h6 class="card-title">Gaming Headsets</h6>
+              <a href="#" class="card-link">Best Selling</a>
+              <p class="card-subtitle text-muted">Cosmic Byte, Acer, HyperX & more</p>
+          </div>
+      </div>
+
+      <div class="card text-center sales">
+          <img class="card-img-top p-2 img-fluid w-100" alt="Best Selling Laptops (Upto 40% off)"
+              src="https://rukminim1.flixcart.com/image/150/150/kctf0cw0/computer/7/j/c/dell-original-imaftuvztweg8kf8.jpeg?q=70"
+              srcset="https://rukminim1.flixcart.com/image/300/300/kctf0cw0/computer/7/j/c/dell-original-imaftuvztweg8kf8.jpeg?q=70 2x, https://rukminim1.flixcart.com/image/150/150/kctf0cw0/computer/7/j/c/dell-original-imaftuvztweg8kf8.jpeg?q=70 1x">
+          <div class="card-body p-1" title="Upto 40% Off">
+              <h6 class="card-title">Best Selling Laptops</h6>
+              <a href="#" class="card-link">Upto 40% Off</a>
+              <p class="card-subtitle text-muted">Asus, Acer, Dell & More</p>
+          </div>
+      </div>
+
+      <div class="card text-center sales">
+          <img class="card-img-top p-2 img-fluid w-100"
+              alt="BeFunky Back Cover for Apple iPhone X, Apple iPhone XS"
+              src="https://rukminim1.flixcart.com/image/150/150/jd0jtzk0/cases-covers/back-cover/z/b/f/befunky-isimple-matte-finish-flexible-soft-tpu-skin-support-original-imafyfmje9mvkfea.jpeg?q=70"
+              srcset="https://rukminim1.flixcart.com/image/300/300/jd0jtzk0/cases-covers/back-cover/z/b/f/befunky-isimple-matte-finish-flexible-soft-tpu-skin-support-original-imafyfmje9mvkfea.jpeg?q=70 2x, https://rukminim1.flixcart.com/image/150/150/jd0jtzk0/cases-covers/back-cover/z/b/f/befunky-isimple-matte-finish-flexible-soft-tpu-skin-support-original-imafyfmje9mvkfea.jpeg?q=70 1x">
+          <div class="card-body p-1" title="Just ₹159">
+              <h6 class="card-title">For Vivo</h6>
+              <a href="#" class="card-link">Just ₹159</a>
+              <p class="card-subtitle text-muted">Plain Case Covers</p>
+          </div>
+      </div>
+      <div class="card text-center sales">
+          <img class="card-img-top p-2 img-fluid w-100" alt="Logitech C310 HD Webcam"
+              src="https://rukminim1.flixcart.com/image/150/150/ja73ki80/webcam/pc-webcam/7/q/e/logitech-c310-original-imaeztzqny7jh7gh.jpeg?q=70"
+              srcset="https://rukminim1.flixcart.com/image/300/300/ja73ki80/webcam/pc-webcam/7/q/e/logitech-c310-original-imaeztzqny7jh7gh.jpeg?q=70 2x, https://rukminim1.flixcart.com/image/150/150/ja73ki80/webcam/pc-webcam/7/q/e/logitech-c310-original-imaeztzqny7jh7gh.jpeg?q=70 1x">
+          <div class="card-body p-1" title="From ₹490">
+              <h6 class="card-title">Webcams</h6>
+              <a href="#" class="card-link">From ₹490</a>
+              <p class="card-subtitle text-muted">Logitech, Quantum & more</p>
+          </div>
+      </div>
+  </div>
+</div>
+<!-- Highlight-3: Product section Ends -->
+
+ <!-- Highlight-4: Product section Starts -->
+ <div class="d-flex pt-2 my-3">
+  <div class="container-fluid bg-white pb-2 border" style="height: fit-content;">
+      <div class="row pt-3">
+          <div class="col slider-heading">
+              <h4>Deals Of the Day</h4>
+          </div>
+          <div class="col col-sm-4 view-btn">
+              <div>
+                  <button class="btn btn-primary shadow">VIEW ALL</button>
+              </div>
+          </div>
+      </div>
+      <hr>
+      <div class="row d-flex nowrap justify-content-center">
+          <div class="card text-center sales">
+              <img class="card-img-top p-2 img-fluid w-100" alt="Logitech C310 HD Webcam"
+                  src="/images/highlight-3/htlt1.jpeg">
+              <div class="card-body p-1" title="30% off">
+                  <h6 class="card-title">ADIDAS</h6>
+                  <a href="#" class="card-link"> Min 30% off</a>
+                  <p class="card-subtitle text-muted">Sports Shoes</p>
+              </div>
+          </div>
+          <div class="card text-center sales">
+              <img class="card-img-top p-2 img-fluid w-100" alt="Logitech C310 HD Webcam"
+                  src="/images/highlight-3/51747.jpeg">
+              <div class="card-body p-1" title="30% off">
+                  <h6 class="card-title">Woodland,Bata,Red Tap...</h6>
+                  <a href="#" class="card-link"> Min 90% off</a>
+                  <p class="card-subtitle text-muted">Womens Foootwear</p>
+              </div>
+          </div>
+          <div class="card text-center sales">
+              <img class="card-img-top p-2 img-fluid w-100" alt="Logitech C310 HD Webcam"
+                  src="/images/highlight-3/3.jpeg">
+              <div class="card-body p-1" title="30% off">
+                  <h6 class="card-title">Jack & Jones,Wildcraft,...</h6>
+                  <a href="#" class="card-link"> Min 30% off</a>
+                  <p class="card-subtitle text-muted">Casual Shoes,Sneakers &</p>
+              </div>
+          </div>
+          <div class="card text-center sales">
+              <img class="card-img-top p-2 img-fluid w-100" alt="Logitech C310 HD Webcam"
+                  src="/images/highlight-3/4.jpeg">
+              <div class="card-body p-1" title="30% off">
+                  <h6 class="card-title">Woodland,Bata,Red Tap...</h6>
+                  <a href="#" class="card-link">Upto 60% off</a>
+                  <p class="card-subtitle text-muted">Casual Shoes, Sneakers</p>
+              </div>
+          </div>
+          <div class="card text-center sales">
+              <img class="card-img-top p-2 img-fluid w-100" alt="Logitech C310 HD Webcam"
+                  src="/images/highlight-3/5.jpeg">
+              <div class="card-body p-1" title="90% off">
+                  <h6 class="card-title">Nike,ASICS,Skeches...</h6>
+                  <a href="#" class="card-link"> Min 90% off</a>
+                  <p class="card-subtitle text-muted">Mens Sports Shoes</p>
+              </div>
+          </div>
+          <div class="card text-center sales">
+              <img class="card-img-top p-2 img-fluid w-100" alt="Logitech C310 HD Webcam"
+                  src="/images/highlight-3/6.jpeg">
+              <div class="card-body p-1" title="Explore More">
+                  <h6 class="card-title">Nike,New Balance</h6>
+                  <a href="#" class="card-link"> Explore More!!</a>
+                  <p class="card-subtitle text-muted">Sports Shoes</p>
+              </div>
+          </div>
+          
+          
+      </div>
+  </div>
+  
+</div>
+
+<!-- highlight sec 4 ends -->
 
 
         <script src="main.js"></script> 
