--- a/index.html
+++ b/index.html
@@ -753,6 +753,104 @@
 
 <!-- highlight sec 4 ends -->
 
+<!-- Footer Starts -->
+<footer class="footer_area">
+  <div class="col content flex">
+      <div class="foosec">
+          <div class="about">ABOUT</div>
+          <a href="#" class="abtsec">Contact Us</a> 
+          <a href="#" class="abtsec">Abour Us</a>
+          <a href="#" class="abtsec">Careers</a>
+          <a href="#" class="abtsec">Flipkart stories</a>
+          <a href="#" class="abtsec">Press</a>
+          <a href="#" class="abtsec">Flipkart wholesale</a>
+          <a href="#" class="abtsec">Corporate Information</a>
+      </div>
+      <div class="foosec">
+          <div class="help">HELP</div>
+          <a href="#" class="helpSec">Payments</a>
+          <a href="#" class="helpSec">Shipping</a>
+          <a href="#" class="helpSec">Cancellation & Returns</a>
+          <a href="#" class="helpSec">FAQ</a>
+          <a href="#" class="helpSec">Report Infringement</a>
+      </div>
+      <div class="foosec">
+          <div class="policy">POLICY</div>
+          <a href="#" class="policySec">Return Policy</a>
+          <a href="#" class="policySec">Terms Of Use</a>
+          <a href="#" class="policySec">Security</a>
+          <a href="#" class="policySec">Privacy</a>
+          <a href="#" class="policySec">Sitemap</a>
+          <a href="#" class="policySec">EPR Compliance</a>
+      </div>
+      <div class="foosec">
+          <div class="social">SOCIAL</div>
+          <a href="#" class="socialSec">Facebook</a>
+          <a href="#" class="socialSec">Twitter</a>
+          <a href="#" class="socialSec">YouTube</a>
+      </div>
+
+      <div class="foosec">
+          <div class="mailAddress"> Mail Us</div>
+          <div class="add">
+          <p>Flipkart Internet Private Limited,</p>
+          <p>Buildings Alyssa, Begonia &</p>
+          <p>Clove Embassy tech Village</p>
+          <p>Outer Ring Road, Devarabeesanahalli Village</p>
+          <p>Bengaluru, 560103,</p>
+          <p>Karnataka, India</p>
+          </div>
+      </div>
+      <div class="foosec">
+          <div class="mailAddresstwo"> Registered Office Address:</div>
+          <div class="add">
+          <p>Flipkart Internet Private Limited,</p>
+          <p>Buildings Alyssa, Begonia &</p>
+          <p>Clove Embassy Tech Village,</p>
+          <p>Outer Ring Road, </p>
+          <p>Bengaluru, 560103,</p>
+          <p>Karnataka, India</p>
+          <p>CIN : U51109KA2012PTC066107</p>
+          <p>Telephone: <a href="tel:18002029898">1800 202 9898</a> </p>
+          </div>
+      </div>
+  </div>
+  <div>
+      <div class="downarea flex">
+          <div>
+              <img src="/images/footer/foo1.svg" alt="">
+              <a href="#">
+                  <span class="downarea_fooImg">Sell On Flipkart</span>
+              </a>
+          </div>
+          <div>
+              <img src="/images/footer/foo2.svg" alt="">
+              <a href="#">
+                  <span class="downarea_fooImg">Advertise</span>
+              </a>
+          </div>
+          <div>
+              <img src="/images/footer/foo3.svg" alt="">
+              <a href="#">
+                  <span class="downarea_fooImg">Gift Cards</span>
+              </a>
+          </div>
+          <div>
+              <img src="/images/footer/foo4.svg" alt="">
+              <a href="#">
+                  <span class="downarea_fooImg">Help Center</span>
+              </a>
+          </div>
+          <span class="year downarea_fooImg">
+              &#169; 2007-2021
+              <span class="flip-link">Flipkart.com</span>
+          </span>
+          <img src="/images/footer/pay1.svg" alt="">
+      </div>
+  </div>
+</footer>
+<!-- footer section ends -->
+
 
         <script src="main.js"></script> 
         <script src="js/bootstrap.min.js"></script>
